--- a/style.css
+++ b/style.css
@@ -90,8 +90,13 @@ text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40
    color: aqua;
 }
 .ddown-body{
-   display: none;
+   margin: 0 auto;
+   opacity: 1;
+   visibility: hidden;
+   width: 0;
+   height: 0;
    font-size: 18px;
+   transition: all 1s;
 }
 .ddown-title{
    padding: 15 20px;
@@ -99,6 +104,7 @@ text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40
    cursor: pointer;
    font-size: 1.5vw;
    padding-bottom: 1.5%;
+   padding-right: 60%;
    
 }
 .ddown-input{
@@ -107,7 +113,6 @@ text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40
    width: 0;
    height: 0;
    position: absolute;
-   
 }  
 .ddown-input1{
    -webkit-appearance: none;
@@ -115,45 +120,62 @@ text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40
    width: 0;
    height: 0;
    position: absolute;
+   display: flex;
 }  
-.ddown-input:hover + .ddown-body{
-   display: block;
+.ddown-item:hover .ddown-body{
+   opacity: 1;
+   visibility: visible;
+   width: 100%;
+   height: 100%;
+   transition: all .5s ease-out;
+   justify-content: center;
 }
-.ddown-input:checked + .ddown-body{
-   display: block;
+.ddown-input:checked ~ .ddown-body{
+   opacity: 1;
+   visibility: visible;
+   width: 100%;
+   height: 100%;
+   transition: all 1s;
+}
+.ddown-input:checked + .label1{
+   color: #000; text-shadow: #FC0 1px 0 10px; 
 }
 .ddown-item{
    margin-bottom: 2%;
+   
 }
 .ddown-menu:hover{
    color: #000;
    text-shadow: #FC0 1px 0 10px;
 }
-.ddown-item{
-   border-bottom: 3px solid rgb(100, 103, 107); 
-}
+
 .image{
    width: 30%;
 }
 .ddown-body{
    margin-top: 1.5%;
    margin-bottom: 1.5%;
+
 }
 
 .label1{
    display: relative;
    display: flex;
-   justify-content: center;
-   justify-content: space-between;
-   
+   border-bottom: 3px solid rgb(100, 103, 107); 
+}
+
+.ion{
+   right: 20%;
+   position: absolute;
+   transition: all 1s;
+   font-size: 0vw;
+}
+.ddown-menu:hover .ion{
+   font-size: 2vw;
 }
 .label1:hover .ion{
    transform: rotate(-45deg);
    transform-origin: center;
    transition: all 1s;
-}
-.ion{
-   right: 20%;
-   position: absolute;
-   transition: all 1s;
+   
 }
