--- a/style.css
+++ b/style.css
@@ -179,3 +179,19 @@ text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40
    transition: all 1s;
    
 }
+@media (max-width:1180px) { 
+   .ddown-title{
+      font-size: 3.2vw;
+      padding-right: 20%;
+   }
+   }
+   @media (max-width:568px) { 
+      
+      .ddown-title{
+         font-size: 2.8vw;
+         padding-right: 20%;
+      }
+      .image{
+         width: 40%;
+      }
+   }
