--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------------------------*/
 body{
-   background-color: #691a1a;
+   background-color: #681818;
 }
 .container{
    width: 60%;
